--- a/web/WEB-INF/jspf/navbar.jspf
+++ b/web/WEB-INF/jspf/navbar.jspf
@@ -1,8 +1,38 @@
 <%-- any content can be specified here e.g.: --%>
+<%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
-<div>
-    <a href="index.jsp">Índice</a>
-    <a href="customers.jsp">Clientes</a>
-    <a href="manufacturer.jsp">Clientes</a>
-</div>
-<hr/>
+<html>
+        <head>      
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+        </head>
+        
+       <style>
+        body {
+             font-family: 'Roboto';
+       }
+       </style>
+       
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    &nbsp; &nbsp; &nbsp;
+    <a class="navbar-brand" href="#"><img src="product.png" style="width: 50px; height: 50px"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+   &nbsp; &nbsp; &nbsp;
+        <div class="collapse navbar-collapse" id="navbarNav" style="align: center">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.jsp">Inicio <span class="sr-only">(atual)</span></a>
+        </li>
+        &nbsp;
+        <li class="nav-item">
+          <a class="nav-link" href="customers.jsp">Clientes</a>
+        </li>
+        &nbsp;
+        <li class="nav-item">
+          <a class="nav-link" href="manufacturer.jsp">Fabricantes</a>
+        </li>
+        </div>
+      </ul>
+  </nav>
+       <br>
