--- a/web/WEB-INF/jspf/navbar.jspf
+++ b/web/WEB-INF/jspf/navbar.jspf
@@ -26,7 +26,7 @@
         </li>
         &nbsp;
         <li class="nav-item">
-          <a class="nav-link" href="compras.jsp">Produtos</a>
+          <a class="nav-link" href="compras.jsp">Compras</a>
         </li>
         &nbsp;
         <li class="nav-item">
