Inclusão dos menus: compras e produtos. Inclusão das fotos dos integrantes

--- a/web/WEB-INF/jspf/navbar.jspf
+++ b/web/WEB-INF/jspf/navbar.jspf
@@ -14,7 +14,7 @@
        
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     &nbsp; &nbsp; &nbsp;
-    <a class="navbar-brand" href="#"><img src="product.png" style="width: 50px; height: 50px"></a>
+    <a class="navbar-brand" href="index.jsp"><img src="product.png" style="width: 50px; height: 50px"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,6 +30,14 @@
         &nbsp;
         <li class="nav-item">
           <a class="nav-link" href="manufacturer.jsp">Fabricantes</a>
+        </li>
+         &nbsp;
+        <li class="nav-item">
+          <a class="nav-link" href="produtos.jsp">Produtos</a>
+        </li>
+         &nbsp;
+        <li class="nav-item">
+          <a class="nav-link" href="compras.jsp">Compras</a>
         </li>
         </div>
       </ul>
